@@ -23,3 +23,4 @@ Código:
 	23/10/2022: Archivo de pruebas terminado (A menos que no coincida con el script de pruebas que aun no suben)
 	24/10/2022: Requisitos faltantes completados
 	27/10/2022: Informe terminado
+	29/10/2022: Agregado script de pruebas del enunciado y mejoras en funciones imageCrop, imageFlipH, imageFlipV
